--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="swiper.min.css">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <title>Nike | website</title>
 </head>
+
 <body>
     <!-------------------navegation--------------------->
     <div class="navigation-container">
@@ -21,24 +25,26 @@
         </div>
 
         <div class="menu-right search-box">
-           <input type="search" class="search-text" placeholder="Search Here">
-           <a href="" class="btn"><i class="fa fa-search" aria-hidden="true"></i></a>
+            <input type="text" class="search-text" placeholder="Search Here">
+
         </div>
         <div class="fix"></div>
     </div>
 
     <!----------------------------------swiper------------------------------>
-        <div class="swiper-container">
-            <div class="fix"></div>
-                <div class="swiper-wrapper">
-        <!------------------------------slide1-------------------------------->
-                <div class="swiper-slide">
+    <div class="swiper-container">
+        <div class="fix"></div>
+        <div class="swiper-wrapper">
+            <!------------------------------slide1-------------------------------->
+            <div class="swiper-slide">
                 <div class="slider-container">
-                <div class="slide-box">
+                    <div class="slide-box">
                         <div class="slider-text">
                             <h6>N E W &nbsp; C O L L E C T I O N</h6>
                             <h2>NEW NIKE <br> SB Nyjah</h2>
-                            <p>Light. Without effort. Perfect. The Nyjah 3 delivers the next iteration of the skate shoe that's as extraordinary as Nyjah. Flyplate technology (a midfoot plate tuned to meet the demands of skating) combines with a honeycomb outsole that's grippy and lightweight.</p>
+                            <p>Light. Without effort. Perfect. The Nyjah 3 delivers the next iteration of the skate shoe
+                                that's as extraordinary as Nyjah. Flyplate technology (a midfoot plate tuned to meet the
+                                demands of skating) combines with a honeycomb outsole that's grippy and lightweight.</p>
                             <div class="categories">
                                 <select>
                                     <option value="">QNT</option>
@@ -57,7 +63,7 @@
                                     <option value="size-42">42</option>
                                 </select>
                                 <a href="R$ 799,99">R$799,99</a>
-                              
+
                             </div>
                         </div>
                         <div class="slider img">
@@ -74,18 +80,149 @@
                     </div>
                 </div>
             </div>
-        </div> 
+            <!------------------------------------------------------------------slide2------------------------------------------------------------------------->
+
+            <div class="swiper-slide">
+                <div class="slider-container">
+                    <div class="slide-box">
+                        <div class="slider-text">
+                            <h6>N E W &nbsp; C O L L E C T I O N</h6>
+                            <h2>NEW NIKE <br> PSG T-Schirt</h2>
+                            <p>Like other jerseys in our Stadium collection, this model combines replica design details
+                                with sweat-wicking fabric for a game-ready look inspired by your favorite team. This
+                                product is 100% made with recycled polyester fibers.</p>
+                            <div class="categories">
+                                <select>
+                                    <option value="">QNT</option>
+                                    <option value="quantity1">1</option>
+                                    <option value="quantity2">2</option>
+                                    <option value="quantity3">3</option>
+                                </select>
+                                <select>
+                                    <option value="">Size</option>
+                                    <option value="size-36">PP</option>
+                                    <option value="size-37">P</option>
+                                    <option value="size-38">M</option>
+                                    <option value="size-39">G</option>
+                                    <option value="size-40">GG</option>
+                                    <option value="size-41">GGG</option>
+                                    <option value="size-42">YYYY</option>
+                                </select>
+                                <a href="R$ 99,99">R$99,99</a>
+
+                            </div>
+                        </div>
+                        <div class="slider img">
+                            <a href=""><img src="psg.png" alt="Nyjah" height="85%" width="85%"></a>
+                        </div>
+                    </div>
+                    <div class="bottom-things">
+                        <div class="cart">
+                            <a href="">Add to Cart</a>
+                        </div>
+                        <div class="shoes-logo">
+                            <a href=""><img src="logo.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!----------------------------------------------------------------slide3----------------------------------------------------------------------------------->
+
+            <div class="swiper-slide">
+                <div class="slider-container">
+                    <div class="slide-box">
+                        <div class="slider-text">
+                            <h6>N E W &nbsp; C O L L E C T I O N</h6>
+                            <h2>NEW NIKE <br> Inter T-Shirt</h2>
+                            <p>Like other jerseys in our Stadium collection, this model combines replica design details
+                                with sweat-wicking fabric for a game-ready look inspired by your favorite team. This
+                                product is 100% made with recycled polyester fibers.</p>
+                            <div class="categories">
+                                <select>
+                                    <option value="">QNT</option>
+                                    <option value="quantity1">1</option>
+                                    <option value="quantity2">2</option>
+                                    <option value="quantity3">3</option>
+                                </select>
+                                <select>
+                                    <option value="">Size</option>
+                                    <option value="size-36">PP</option>
+                                    <option value="size-37">P</option>
+                                    <option value="size-38">M</option>
+                                    <option value="size-39">G</option>
+                                    <option value="size-40">GG</option>
+                                    <option value="size-41">GGG</option>
+                                    <option value="size-42">YYYY</option>
+                                </select>
+                                <a href="R$119,99">R$119,99</a>
+
+                            </div>
+                        </div>
+                        <div class="slider img">
+                            <a href=""><img src="inter.png" alt="Nyjah" height="85%" width="85%"></a>
+                        </div>
+                    </div>
+                    <div class="bottom-things">
+                        <div class="cart">
+                            <a href="">Add to Cart</a>
+                        </div>
+                        <div class="shoes-logo">
+                            <a href=""><img src="logo.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-------------------------------------------------------------------------------------slide4------------------------------------------------------------------------------->
+
+            <div class="swiper-slide">
+                <div class="slider-container">
+                    <div class="slide-box">
+                        <div class="slider-text">
+                            <h6>N E W &nbsp; C O L L E C T I O N</h6>
+                            <h2>NEW NIKE <br> Barcelona T-Shirt</h2>
+                            <p>Like other jerseys in our Stadium collection, this model combines replica design details
+                                with sweat-wicking fabric for a game-ready look inspired by your favorite team. This
+                                product is 100% made with recycled polyester fibers.</p>
+                            <div class="categories">
+                                <select>
+                                    <option value="">QNT</option>
+                                    <option value="quantity1">1</option>
+                                    <option value="quantity2">2</option>
+                                    <option value="quantity3">3</option>
+                                </select>
+                                <select>
+                                    <option value="">Size</option>
+                                    <option value="size-36">PP</option>
+                                    <option value="size-37">P</option>
+                                    <option value="size-38">M</option>
+                                    <option value="size-39">G</option>
+                                    <option value="size-40">GG</option>
+                                    <option value="size-41">GGG</option>
+                                    <option value="size-42">YYYY</option>
+                                </select>
+                                <a href="R$ 149,99">R$149,99</a>
+
+                            </div>
+                        </div>
+                        <div class="slider img">
+                            <a href=""><img src="barcelona.png" alt="Nyjah" height="85%" width="85%"></a>
+                        </div>
+                    </div>
+                    <div class="bottom-things">
+                        <div class="cart">
+                            <a href="">Add to Cart</a>
+                        </div>
+                        <div class="shoes-logo">
+                            <a href=""><img src="logo.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
-
-
-
-
-
-
-
-
-
-    <!---------------------Script------------------>
+    <script type="text/javascript" src="swiper.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
